{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 192,
  "lineage": "56484b15-5139-4ea6-4435-d7dcecfe484e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:305311160206:instance/i-04fd3ba09ca3a884a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fd3ba09ca3a884a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSLogin",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0852a9a6ded64142a"
              }
            ],
            "primary_network_interface_id": "eni-0852a9a6ded64142a",
            "private_dns": "ip-10-1-0-5.us-east-2.compute.internal",
            "private_ip": "10.1.0.5",
            "public_dns": "ec2-13-58-239-51.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.239.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b87bcdb7b285a2d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d6b7970c4c47c23",
            "tags": {
              "Name": "instance-terra"
            },
            "tags_all": {
              "Name": "instance-terra"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0868fe9adc40892d6"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic-terra",
            "aws_security_group.secruity-terraform",
            "aws_subnet.pub-a-subnet-terra",
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:internet-gateway/igw-07b2f7c1d20cc62e4",
            "id": "igw-07b2f7c1d20cc62e4",
            "owner_id": "305311160206",
            "tags": {
              "Name": "gw-terra"
            },
            "tags_all": {
              "Name": "gw-terra"
            },
            "vpc_id": "vpc-0bfd384942de8fea8"
          },
          "dependencies": [
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-058570d982fc4f0e3",
                "device_index": 0,
                "instance": "i-04fd3ba09ca3a884a"
              }
            ],
            "id": "eni-0852a9a6ded64142a",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:f5:21:35:95:26",
            "private_dns_name": "ip-10-1-0-5.us-east-2.compute.internal",
            "private_ip": "10.1.0.5",
            "private_ips": [
              "10.1.0.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0868fe9adc40892d6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d6b7970c4c47c23"
          },
          "dependencies": [
            "aws_security_group.secruity-terraform",
            "aws_subnet.pub-a-subnet-terra",
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv-rt-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:route-table/rtb-078150726714a816e",
            "id": "rtb-078150726714a816e",
            "owner_id": "305311160206",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prv-rt-terra"
            },
            "tags_all": {
              "Name": "prv-rt-terra"
            },
            "vpc_id": "vpc-0bfd384942de8fea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:route-table/rtb-0bc61d74c3e6339e3",
            "id": "rtb-0bc61d74c3e6339e3",
            "owner_id": "305311160206",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b2f7c1d20cc62e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt-terra"
            },
            "tags_all": {
              "Name": "pub-rt-terra"
            },
            "vpc_id": "vpc-0bfd384942de8fea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-terra",
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-prv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053acffe5a6968cf8",
            "route_table_id": "rtb-078150726714a816e",
            "subnet_id": "subnet-01c80190849613a3b"
          },
          "dependencies": [
            "aws_route_table.prv-rt-terra",
            "aws_subnet.prv-b-subnet-terra",
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3dd9d4e3b78cf6e",
            "route_table_id": "rtb-0bc61d74c3e6339e3",
            "subnet_id": "subnet-00d6b7970c4c47c23"
          },
          "dependencies": [
            "aws_internet_gateway.gw-terra",
            "aws_route_table.pub-rt-terra",
            "aws_subnet.pub-a-subnet-terra",
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secruity-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:security-group/sg-0868fe9adc40892d6",
            "description": "Allow traffic 80,443,8080,22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0868fe9adc40892d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security-terraform",
            "name_prefix": "",
            "owner_id": "305311160206",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-terraform"
            },
            "tags_all": {
              "Name": "security-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfd384942de8fea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv-b-subnet-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:subnet/subnet-01c80190849613a3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.0.16/28",
            "id": "subnet-01c80190849613a3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305311160206",
            "tags": {
              "Name": "prv-b-subnet-terra"
            },
            "tags_all": {
              "Name": "prv-b-subnet-terra"
            },
            "vpc_id": "vpc-0bfd384942de8fea8"
          },
          "dependencies": [
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-a-subnet-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:subnet/subnet-00d6b7970c4c47c23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/28",
            "id": "subnet-00d6b7970c4c47c23",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "305311160206",
            "tags": {
              "Name": "pub-a-subnet-terra"
            },
            "tags_all": {
              "Name": "pub-a-subnet-terra"
            },
            "vpc_id": "vpc-0bfd384942de8fea8"
          },
          "dependencies": [
            "aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:vpc/vpc-0bfd384942de8fea8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/26",
            "default_network_acl_id": "acl-0d4b729cc7bc21199",
            "default_route_table_id": "rtb-0830f2ed070cbd2ca",
            "default_security_group_id": "sg-08eb92a7c1650f2f4",
            "dhcp_options_id": "dopt-c5d74cae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bfd384942de8fea8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0830f2ed070cbd2ca",
            "owner_id": "305311160206",
            "tags": {
              "Name": "vpc-terra"
            },
            "tags_all": {
              "Name": "vpc-terra"
            }
          }
        }
      ]
    }
  ]
}